feat: updated to 1.18.2, fixed block store issues, much better performance